[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "answers>=0.0.4",
    "django-buttons>=1.0.3",
    "flask>=3.1.0",
    "pip>=25.0.1",
    "pytelegrambotapi>=4.26.0",
    "requests>=2.32.3",
]
